--- a/scss/_singleProduct.scss
+++ b/scss/_singleProduct.scss
@@ -246,26 +246,109 @@
 
       .product_image {
         position: absolute;
-        max-height: 15vw;
+        width: 100%;
         height: 100%;
-        top: 10%;
+        top: 5%;
         left: 53%;
         transform: translateX(-50%);
         text-align: center;
         z-index: 2;
-        @media #{$s1023} {
-          max-height: 230px;
-        }
+        // @media #{$s1023} {
+        //   max-height: 230px;
+        // }
 
-        @media #{$s750} {
-          max-height: 110px;
-          top: 7%;
-        }
+        // @media #{$s750} {
+        //   max-height: 110px;
+        //   top: 7%;
+        // }
 
         img {
           object-fit: contain;
-          width: auto;
-          height: 100%;
+          // width: auto;
+          // height: 100%;
+          &.small {
+            &.square {
+              width: 8%;
+              @media #{$s1023} {
+                width: 18%;
+              }
+            }
+            &.portrait {
+              width: 8%;
+              @media #{$s1023} {
+                width: 18%;
+              }
+            }
+            &.landscape {
+              width: 10%;
+              @media #{$s1023} {
+                width: 22.5%;
+              }
+            }
+          }
+
+          &.medium {
+            &.square {
+              width: 11%;
+              @media #{$s1023} {
+                width: 24.75%;
+              }
+            }
+            &.portrait {
+              width: 11%;
+              @media #{$s1023} {
+                width: 24.75%;
+              }
+            }
+            &.landscape {
+              width: 13%;
+              @media #{$s1023} {
+                width: 29.25%;
+              }
+            }
+          }
+
+          &.large {
+            &.portrait {
+              width: 16%;
+              @media #{$s1023} {
+                width: 36%;
+              }
+            }
+            &.square {
+              width: 16%;
+              @media #{$s1023} {
+                width: 36%;
+              }
+            }
+            &.landscape {
+              width: 29%;
+              @media #{$s1023} {
+                width: 65.25%;
+              }
+            }
+          }
+
+          &.xl {
+            &.portrait {
+              width: 28%;
+              @media #{$s1023} {
+                width: 63%;
+              }
+            }
+            &.square {
+              width: 28%;
+              @media #{$s1023} {
+                width: 63%;
+              }
+            }
+            &.landscape {
+              width: 40%;
+              @media #{$s1023} {
+                width: 80%;
+              }
+            }
+          }
         }
       }
     }
