--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -717,7 +717,7 @@ footer {
 }
 .cta_fixed_popup {
   position: fixed;
-  right: 2vw;
+  left: 2vw;
   bottom: 2vw;
   z-index: 10;
   min-width: 160px;
@@ -727,12 +727,12 @@ footer {
     display: none !important;
   }
   @media #{$s1100} {
-    right: 20px;
+    left: 20px;
     bottom: 20px;
   }
 
   @media #{$s750} {
-    right: 10px;
+    left: 10px;
     bottom: 10px;
   }
 
