--- a/scss/_singleArtist.scss
+++ b/scss/_singleArtist.scss
@@ -424,29 +424,31 @@
         }
 
         &:hover {
-          &:nth-child(6n + 1) {
-            background-color: $color6;
-          }
+          background-color: #d9d9d9;          
 
-          &:nth-child(6n + 2) {
-            background-color: $color4;
-          }
+          // &:nth-child(6n + 1) {
+          //   background-color: $color6;
+          // }
 
-          &:nth-child(6n + 3) {
-            background-color: $color5;
-          }
+          // &:nth-child(6n + 2) {
+          //   background-color: $color4;
+          // }
 
-          &:nth-child(6n + 4) {
-            background-color: $color4;
-          }
+          // &:nth-child(6n + 3) {
+          //   background-color: $color5;
+          // }
 
-          &:nth-child(6n + 5) {
-            background-color: $color3;
-          }
+          // &:nth-child(6n + 4) {
+          //   background-color: $color4;
+          // }
 
-          &:nth-child(6n + 6) {
-            background-color: $color6;
-          }
+          // &:nth-child(6n + 5) {
+          //   background-color: $color3;
+          // }
+
+          // &:nth-child(6n + 6) {
+          //   background-color: $color6;
+          // }
 
           .single_work_image {
             img {
