--- a/scss/_singleProduct.scss
+++ b/scss/_singleProduct.scss
@@ -512,7 +512,7 @@
             }
 
             &:hover {
-              background-color: #d9d9d9;          
+              background-color: #d9d9d9;
               .left {
                 color: $color1;
               }
@@ -948,8 +948,8 @@
             border: 1px solid $color2;
             overflow: hidden;
             padding-top: 120%;
-            border-top-left-radius: 500px;
-            border-top-right-radius: 500px;
+            // border-top-left-radius: 500px;
+            // border-top-right-radius: 500px;
             -webkit-backface-visibility: hidden;
             -moz-backface-visibility: hidden;
             -webkit-transform: translate3d(0, 0, 0);
@@ -1546,7 +1546,7 @@
         }
 
         &:hover {
-          background-color: #d9d9d9;          
+          background-color: #d9d9d9;
 
           // &:nth-child(6n + 1) {
           //   background-color: $color6;
