--- a/scss/woocomerce/checkout/_form-checkout.scss
+++ b/scss/woocomerce/checkout/_form-checkout.scss
@@ -464,6 +464,7 @@ body.woocommerce-checkout {
           label {
             @extend .small_text;
             color: $color2;
+            text-transform: capitalize;
           }
 
           #order_comments_field {
@@ -484,6 +485,35 @@ body.woocommerce-checkout {
             font-family: "aktiv-grotesk";
             .variation {
               display: none;
+            }
+
+            #shipping_method {
+              input[type="radio"] {
+                visibility: hidden;
+                position: relative;
+
+                margin-left: 5px;
+                width: 20px;
+                height: 20px;
+              }
+
+              input[type="radio"]:before {
+                content: "";
+                visibility: visible;
+                position: absolute;
+
+                border: 2px solid #eb6864;
+                border-radius: 50%;
+
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+              }
+
+              input[checked="checked"]:before {
+                background-color: #eb6864;
+              }
             }
           }
         }
