--- a/scss/woocomerce/checkout/_form-checkout.scss
+++ b/scss/woocomerce/checkout/_form-checkout.scss
@@ -511,8 +511,25 @@ body.woocommerce-checkout {
                 left: 0;
               }
 
-              input[checked="checked"]:before {
-                background-color: #eb6864;
+              input[checked="checked"] ~ label {
+                background-color: #fff;
+              }
+
+              label {
+                position: relative;
+                &:before {
+                  content: "";
+                  visibility: visible;
+                  position: absolute;
+                  border: 1px solid #fff;
+                  border-radius: 50%;
+                  top: -2px;
+                  right: 0;
+                  bottom: 0;
+                  left: -30px;
+                  height: 20px;
+                  width: 20px;
+                }
               }
             }
           }
