--- a/scss/woocomerce/checkout/_form-checkout.scss
+++ b/scss/woocomerce/checkout/_form-checkout.scss
@@ -511,8 +511,10 @@ body.woocommerce-checkout {
                 left: 0;
               }
 
-              input[checked="checked"] ~ label::before {
-                background-color: #fff;
+              input[checked="checked"] ~ label {
+                &::before {
+                  background-color: #fff;
+                }
               }
 
               label {
