--- a/scss/woocomerce/checkout/_form-checkout.scss
+++ b/scss/woocomerce/checkout/_form-checkout.scss
@@ -448,6 +448,13 @@ body.woocommerce-checkout {
         }
 
         #customer_details {
+          > .shipping_box {
+            > .woocommerce-shipping-fields,
+            > .woocommerce-additional-fields {
+              display: none;
+            }
+          }
+
           textarea,
           input {
             @include formInputFont();
