--- a/scss/woocomerce/checkout/_form-checkout.scss
+++ b/scss/woocomerce/checkout/_form-checkout.scss
@@ -132,6 +132,9 @@ body.woocommerce-checkout {
         display: none;
       }
 
+      .woocommerce-message {
+        display: none;
+      }
       .checkout_coupon {
         display: flex !important;
         padding: 0;
