--- a/scss/woocomerce/checkout/_form-checkout.scss
+++ b/scss/woocomerce/checkout/_form-checkout.scss
@@ -498,7 +498,7 @@ body.woocommerce-checkout {
               input[type="radio"] {
                 visibility: hidden;
                 position: relative;
-
+                opacity: 0;
                 margin-left: 5px;
                 width: 20px;
                 height: 20px;
